testing fix for black bar on mobile screen

--- a/cards.css
+++ b/cards.css
@@ -6,6 +6,8 @@ body {
 }
 h1 {
     display: none;
+    width: 100%;
+    height: 100%;
     text-align: center;
     margin: 0;
     padding: 0;
